@@ -1,3 +1,7 @@
+2011-01-04  1.0-r23  Sauce Labs <help@saucelabs.com>
+
+    * Advanced option for connecting SSH on alternative port
+
 2010-12-20  1.0-r22  Sauce Labs <help@saucelabs.com>
 
     * Support using an HTTP/HTTPS proxy for REST API connections.
